@@ -1,5 +1,6 @@
 214
 - Fix log file rename in launcher script.
+- Remove Executed class from bootstrap module.
 
 212
 - Fix log file rename on startup.
